chore(core, contactNets)
- Modify Layout CSS

--- a/src/modules/contactNets/directives/cnContactNetChatCardChannelConfiguration/cnContactNetChatCardChannelConfiguration.html
+++ b/src/modules/contactNets/directives/cnContactNetChatCardChannelConfiguration/cnContactNetChatCardChannelConfiguration.html
@@ -12,7 +12,7 @@
 		<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
 
 			<div flex layout="column" layout-align="space-between">
-				
+
 					<div layout layout="row">
 						<md-input-container flex>
 			        <label>Curso del tráfico</label>
@@ -20,97 +20,97 @@
 			      </md-input-container>
 					</div>
 					<div layout="column">
-						<h3 flex>Tráfico entrante</h3>
+						<h4>Tráfico entrante</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
 				        <label>Música en espera</label>
 				        <input ng-model="v.music">
-				      </md-input-container>			
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Simulate Audio</label>
 				        <input ng-model="v.music">
-				      </md-input-container>	
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Regla</label>
 				        <input ng-model="v.music">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo Administrativo</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo medio</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Máximo número</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 						</div>
 					</div>
 					<div layout="column">
-						<h3 flex>Configuración avanzada del tráfico entrante</h3>
+						<h4>Configuración avanzada del tráfico entrante</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
 				        <label>Música en espera</label>
 				        <input ng-model="v.music">
-				      </md-input-container>			
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Simulate Audio</label>
 				        <input ng-model="v.music">
-				      </md-input-container>	
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Regla</label>
 				        <input ng-model="v.music">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo Administrativo</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo medio</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Máximo número</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 						</div>
 					</div>
 					<div layout="column">
-						<h3 flex>Tráfico saliente</h3>
+						<h4>Tráfico saliente</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
 				        <label>Música en espera</label>
 				        <input ng-model="v.music">
-				      </md-input-container>			
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Simulate Audio</label>
 				        <input ng-model="v.music">
-				      </md-input-container>	
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Regla</label>
 				        <input ng-model="v.music">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo Administrativo</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Tiempo medio</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 				      <md-input-container flex="33" layout-padding>
 				        <label>Máximo número</label>
 				        <input type="number" ng-model="v.time">
-				      </md-input-container>		
+				      </md-input-container>
 						</div>
 					</div>
 					<div layout layout-align="end">
 						<md-button ng-click="cnContactNetChatCardChannelConfiguration.openCard = false;" class="md-accent md-hue-2">Cancelar</md-button>
 						<md-button class="md-accent md-raised md-hue-2">Guardar</md-button>
 					</div>
-					
+
 				</div>
 
 			</div>
