--- a/src/modules/contactNets/directives/cnContactNetMailCardChannelConfiguration/cnContactNetMailCardChannelConfiguration.html
+++ b/src/modules/contactNets/directives/cnContactNetMailCardChannelConfiguration/cnContactNetMailCardChannelConfiguration.html
@@ -17,95 +17,95 @@
 
 					<div layout layout="row">
 						<md-input-container flex>
-			        <label>Curso del tráfico</label>
-			        <input ng-model="v.trafic">
-			      </md-input-container>
+							<label>Curso del tráfico</label>
+							<input ng-model="v.trafic">
+						</md-input-container>
 					</div>
 					<div layout="column">
-						<h3 flex>Tráfico entrante</h3>
+						<h4>Tráfico entrante</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
-				        <label>Música en espera</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Simulate Audio</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Regla</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo Administrativo</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo medio</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Máximo número</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
+								<label>Música en espera</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Simulate Audio</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Regla</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo Administrativo</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo medio</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Máximo número</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
 						</div>
 					</div>
 					<div layout="column">
-						<h3 flex>Configuración avanzada del tráfico entrante</h3>
+						<h4>Configuración avanzada del tráfico entrante</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
-				        <label>Música en espera</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Simulate Audio</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Regla</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo Administrativo</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo medio</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Máximo número</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
+								<label>Música en espera</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Simulate Audio</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Regla</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo Administrativo</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo medio</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Máximo número</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
 						</div>
 					</div>
 					<div layout="column">
-						<h3 flex>Tráfico saliente</h3>
+						<h4>Tráfico saliente</h4>
 						<div layout="row" flex layout-wrap>
 							<md-input-container flex="33" layout-padding>
-				        <label>Música en espera</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Simulate Audio</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Regla</label>
-				        <input ng-model="v.music">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo Administrativo</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Tiempo medio</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
-				      <md-input-container flex="33" layout-padding>
-				        <label>Máximo número</label>
-				        <input type="number" ng-model="v.time">
-				      </md-input-container>
+								<label>Música en espera</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Simulate Audio</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Regla</label>
+								<input ng-model="v.music">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo Administrativo</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Tiempo medio</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
+							<md-input-container flex="33" layout-padding>
+								<label>Máximo número</label>
+								<input type="number" ng-model="v.time">
+							</md-input-container>
 						</div>
 					</div>
 					<div layout layout-align="end">
