--- a/src/modules/channels/channels.html
+++ b/src/modules/channels/channels.html
@@ -85,7 +85,7 @@
 				<div flex layout="column">
 					<h3>No hay ningun Canal guardado, puedes <span class="blueVC-color" ng-click="openFab()">crear el primero ahora</span></h3>
 					<p>
-						Recuerda que necesitarás al menos tener creada una regla por cada canal que acrives en el ContactNet
+						Recuerda que necesitarás al menos tener creada una regla por cada canal que actives en el ContactNet
 						<br>
 						A continuación le recordamos los canales que tiene contratados
 					</p>
