--- a/src/modules/rules/rules.html
+++ b/src/modules/rules/rules.html
@@ -81,7 +81,7 @@
 						<div flex layout="column">
 							<h3>No hay ninguna regla guardada, puedes <span class="blueVC-color" ng-click="addNew()">crear la primera ahora</span></h3>
 							<p>
-								Recuerda que necesitarás al menos tener creada una regla por cada canal que acTives en el ContactNet
+								Recuerda que necesitarás al menos tener creada una regla por cada canal que actives en el ContactNet
 								<br>
 								A continuación le recordamos los canales que tiene contratados
 							</p>
