--- a/src/modules/rules/directives/categorization/categorization.html
+++ b/src/modules/rules/directives/categorization/categorization.html
@@ -1,10 +1,10 @@
 <div class="categorization" flex layout="column">
-	<div flex layout="row">
+	<div layout="row">
 		<md-input-container flex>
       <label>Etiqueta de la categoría</label>
       <input ng-model="v.name">
     </md-input-container>
-    <div flex layout="row">
+    <div layout="row">
     	<p>Si</p>
     	<md-input-container>
         <label>Option</label>
@@ -30,6 +30,6 @@
       <input ng-model="v.ss">
     </md-input-container>
   </div>
-	
+
 
 </div>
