--- a/src/modules/rules/directives/routingRules/routingRules.html
+++ b/src/modules/rules/directives/routingRules/routingRules.html
@@ -2,7 +2,7 @@
 	<span layout-margin flex>{{routingRule.name}}</span>
 </md-list-item>
 
-<div class="item-card" ng-if="routingRule.openCard" layout="column" layout-fill>
+<div class="item-card" ng-if="routingRule.openCard" layout="column">
 	<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
 
 		<div flex layout="column" layout-align="space-between">
