--- a/src/modules/rules/rules.html
+++ b/src/modules/rules/rules.html
@@ -42,7 +42,7 @@
 						<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
 
 							<div flex layout="column" layout-align="start">
-								<div style="overflow-y:auto;" layout="row">
+								<div layout="row">
 									<md-input-container flex>
 						        <label>Nombre de la regla</label>
 						        <input ng-model="v.name">
