--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div id="sidenavUserInfo" layout="column">
       <div flex layout="column" layout-align="center-center" layout-margin>
         <span style="background-image: url(http://static.bleacherreport.net/images/redesign/avatars/default-user-icon-profile.png);" layout></span>
-        <p>Mariano López</p>
+        <p>David Caballero</p>
       </div>
       <div></div>
     </div>
