--- a/src/index.html
+++ b/src/index.html
@@ -17,115 +17,9 @@
 
 <body ng-controller="appController" layout layout="column" role="application" ng-cloak ng-show="menu">
 
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2 md-closed" md-is-locked-open="$mdMedia('gt-xs') && isOpenLeft()" md-component-id="left">
-    <div id="sidenavUserInfo" layout="column">
-      <div flex layout="column" layout-align="center-center" layout-margin>
-        <span style="background-image: url(http://static.bleacherreport.net/images/redesign/avatars/default-user-icon-profile.png);" layout></span>
-        <p>David Caballero</p>
-      </div>
-      <div></div>
-    </div>
-    <nav layout="column" flex>
-      <ul layout="column" flex class="layoutMenu">
-        <li ng-repeat="(k,v) in menu" layout="column" layout-align="center center">
-          <div layout="row" ng-show="v.href" layout-align="center center">
-            <md-icon md-svg-icon="{{v.icon}}" aria-label="Alarm Icon"></md-icon>
-            <md-button ng-href="{{v.href}}" ng-click="open = !open" flex>
-              {{v.name}}
-            </md-button>
-          </div>
-          <div layout="row" ng-show="!v.href" layout-align="center center">
-            <md-icon md-svg-icon="{{v.icon}}" aria-label="Alarm Icon"></md-icon>
-            <md-button ng-click="open = !open" flex>
-              {{v.name}}
-            </md-button>
-            <div ng-class="{'arrowDown': open, 'arrowUp' : !open}"></div>
-          </div>
-          <ul ng-show="v.views && open">
-              <li ng-repeat="(kk,vv) in v.views">
-                <md-button cn-navigate="{{vv.uri}}">
-                  {{vv.name}}
-                </md-button>
-                <md-button ng-show="v.href" ng-href="{{v.href}}" ng-click="open = !open">
-                  {{v.name}}
-                </md-button>
-              </li>
-            </ul>
-        </li>
-      </ul>
-    </nav>
-    </md-sidenav>
-  <md-content role="main" layout="column" flex>
-    <md-toolbar class="masthead md-hue-2">
-      <div class="md-toolbar-tools" layout="row" layout-align="end center">
-        <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" layout-align="star">
-          <md-icon md-svg-icon="menu" aria-label="Alarm Icon"></md-icon>
-        </md-button>
-        <nav flex layout="row" layout-align="end center" id="navMenuTop">
-          <ul layout="row" layout-align="end center" flex="80">
-            <li>
-              <md-button> 
-                Administración
-              </md-button>
-            </li>
-            <li>
-              <md-button> 
-                Configuración
-              </md-button>
-            </li>
-            <li>
-              <md-button> 
-                Envío SMS
-              </md-button>
-            </li>
-            <li>
-              <md-button> 
-                Estadísticas
-              </md-button>
-            </li>
-            <li>
-              <md-button> 
-                Intelligent Cloud Dialer
-              </md-button>
-            </li>
-          </ul>
-        </nav>
-      </div>
+  <md-content flex>
 
-      <h1 layout layout-align="start center" class="sectionTitle md-headline">
-        {{environment.actualSection}}
-      </h1>
-
-      <md-tabs md-selected="selectedIndex" flex class="topTabs md-hue-2" md-no-ink>
-        <md-tab ng-repeat="(k,v) in menu[2].views[5].views" ng-click="cnNavigate.path(v.uri)">
-          <md-tab-label layout="row">
-            <md-icon md-svg-icon="{{v.uri}}" aria-label="{{v.name}} Icon"></md-icon>
-            <md-button class="md-button disable-hover" md-no-ink aria-label="{{v.name}} Button">
-              <span>{{v.name}}</span>
-            </md-button>
-          </md-tab-label>
-        </md-tab>
-      </md-tabs>
-
-
-			<md-fab-speed-dial md-direction="down" md-open="fab.isOpen" class="md-scale fabButtonCreate">
-			  <md-fab-trigger>
-			    <md-button aria-label="trigger" ng-click="fab.trigger.action()" class="md-fab md-accent">
-						<md-icon md-svg-icon="{{fab.trigger.icon}}"></md-icon>
-					</md-button>
-			  </md-fab-trigger>
-			  <md-fab-actions>
-					<div ng-if="fab.isOpen" ng-repeat="(k,v) in fab.actions">
-						<md-button aria-label="button" ng-click="v.action()" class="md-fab md-accent md-raised md-mini">
-							<md-icon md-svg-icon="{{v.icon}}"></md-icon>
-						</md-button>
-					</div>
-			  </md-fab-actions>
-			</md-fab-speed-dial>
-
-    </md-toolbar>
-
-    <section role="view" layout layout="column" ng-class="route" flex ui-view></section>
+    <section role="view" layout layout="row" ng-class="route" flex ui-view></section>
 
   </md-content>
 
