--- a/src/contactNetConfig/layout.html
+++ b/src/contactNetConfig/layout.html
@@ -106,4 +106,4 @@
 
   </md-toolbar>
 
-  <section role="view" layout layout="column" ng-class="route" flex ui-view></section>
+  <section role="insideView" layout layout="column" ng-class="route" flex ui-view></section>
