--- a/src/contactNetConfig/index.html
+++ b/src/contactNetConfig/index.html
@@ -11,13 +11,12 @@
 
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 
-
 	<link href='css/styles.min.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body ng-controller="appController" layout layout="column" role="application" ng-cloak ng-show="menu">
 
-  <md-content flex>
+  <md-content flex layout="row">
 
     <section role="view" layout layout="row" ng-class="route" flex ui-view></section>
 
