--- a/src/contactNetConfig/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
+++ b/src/contactNetConfig/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
@@ -15,7 +15,9 @@
 				<div layout layout="row">
 					<md-input-container flex layout-align="center strech">
 		        <label>Curso del tráfico</label>
-		        <input ng-model="v.trafic">
+		        <md-select ng-model="v.trafic">
+		        	<md-option value="1">Entrante y Saliente</md-option>
+		        </md-select>
 		      </md-input-container>
 				</div>
 				<div layout="column">
@@ -23,7 +25,11 @@
 					<div layout="row" flex layout-wrap layout-align="strech">
 						<md-input-container flex="33">
 			        <label>Música en espera</label>
-			        <input ng-model="v.music">
+			        <md-select ng-model="v.music">
+			        	<md-option value="1">Nombre de música 1</md-option>
+			        	<md-option value="2">Nombre de música 2</md-option>
+			        	<md-option value="3">Nombre de música 3</md-option>
+			        </md-select>
 			      </md-input-container>
 			      <md-input-container flex="33">
 			        <label>Simulate Audio</label>
@@ -31,7 +37,9 @@
 			      </md-input-container>
 			      <md-input-container flex="33">
 			        <label>Regla</label>
-			        <input ng-model="v.aleatorio">
+			        <md-select ng-model="v.rules">
+			        	<md-option value="1">Aleatorio mismo peso</md-option>
+			        </md-select>
 			      </md-input-container>
 			      <md-input-container flex="33">
 			        <label>Tiempo Administrativo</label>
@@ -56,7 +64,10 @@
 						<div flex="25">
 							<md-input-container>
 				        <label>Comportamiento según disponibilidad</label>
-				        <input ng-model="v.disponible1">
+				        <md-select ng-model="v.disponibility">
+				        	<md-option value="1">Si</md-option>
+				        	<md-option value="2">No</md-option>
+				        </md-select>
 				      </md-input-container>
 						</div>
 			      <div layout="row" flex="25" layout-align="center center">
@@ -83,13 +94,17 @@
 					      <div flex="22" layout="row">
 									<md-input-container>
 						        <label>Tipo de notificación</label>
-						        <input ng-model="v.disponible2">
+						        <md-select ng-model="v.typeNotification">
+						        	<md-option value="1">Tiempo medio en cola usando TTS</md-option>
+						        </md-select>
 						      </md-input-container>
 								</div>
 					      <div flex="22" layout="row">
 									<md-input-container>
 						        <label>Seleccionar audio</label>
-						        <input ng-model="v.disponible3">
+						        <md-select ng-model="v.audio">
+						        	<md-option value="1">Gracias por esperar</md-option>
+						        </md-select>
 						      </md-input-container>
 								</div>
 					      <div flex="22" layout="row" layout-align="center center">
@@ -104,7 +119,7 @@
 						      </md-input-container>
 					      </div>
 					      <div flex="12" layout="row">
-									<md-icon md-svg-icon="phone" aria-label="Open Chat" class="md-hue-3"></md-icon>
+									<md-icon md-svg-icon="delete" aria-label="delete notification" class="md-hue-3"></md-icon>
 					      </div>
 				      </div>
 			      </div>
